fix filters-bar on tablet mode

--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,10 @@ footer {
         align-items: flex-start;
     }
 
+    .filters {
+        align-self: flex-start;
+    }
+    
     .filters-bar p {
         margin: 0;
     }   
